added all jpg, giff and png images as individual variable s to run through the constructor function and set all images on html with class to print to the dom

--- a/index.html
+++ b/index.html
@@ -7,7 +7,29 @@
    <body>
    <img src='./assets/bag.jpg' class='one'>
    <img src='./assets/banana.jpg' class='two'>
-   <img src='./assets/chair.jpg' class='three'>
+   <img src='./assets/bathroom.jpg' class='three'>
+   <img src = './assets/boots.jpg' class='four'>
+   <img src = './assets/breakfast.jpg' class='five'>
+   <img src = './assets/bubblegum.jpg' class='six'>
+   <img src = './assets/chair.jpg' class='seven'>
+   <img src = './assets/cthulhu.jpg' class='eight'>
+   <img src = './assets/dog-duck.jpg' class='nine'>
+   <img src = './assets/dragon.jpg' class='ten'>
+   <img src = './assets/pen.jpg' class='eleven'>
+   <img src = './assets/pet-sweep.jpg' class='twelve'>
+   <img src = './assets/scissors.jpg' class='thirteen'>
+   <img src = './assets/shark.jpg' class='fourteen'>
+   <img src = './assets/sweep.png' class='fifteen'>
+   <img src = './assets/tauntaun.jpg' class='sixteen'>
+   <img src = './assets/unicorn.jpg' class='seventeen'>
+   <img src = './assets/usb.gif' class='eighteen'>
+   <img src = './assets/water-can.jpg' class='nineteen'>
+   <img src = './assets/wine-glass.jpg' class='twenty'>
+   <!-- <img src = './assets/xxx.jpg' class='twenty-one'>
+   <img src = './assets/xxx.jpg' class='twenty-two'>
+   <img src = './assets/xxx.jpg' class='twenty-three'>
+   <img src = './assets/xxx.jpg' class='twenty-four'>
+   <img src = './assets/xxx.jpg' class='twenty-five'> -->
    </body>
    <script src='app.js'></script>
 </html>
