--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
       <link rel='stylesheet' href='style.css'>
    </head>
    <body>
-   <img src='./assets/bag.jpg' class='one'>
-   <img src='./assets/banana.jpg' class='two'>
-   <img src='./assets/bathroom.jpg' class='three'>
-   <img src = './assets/boots.jpg' class='four'>
-   <img src = './assets/breakfast.jpg' class='five'>
-   <img src = './assets/bubblegum.jpg' class='six'>
-   <img src = './assets/chair.jpg' class='seven'>
-   <img src = './assets/cthulhu.jpg' class='eight'>
-   <img src = './assets/dog-duck.jpg' class='nine'>
-   <img src = './assets/dragon.jpg' class='ten'>
-   <img src = './assets/pen.jpg' class='eleven'>
-   <img src = './assets/pet-sweep.jpg' class='twelve'>
-   <img src = './assets/scissors.jpg' class='thirteen'>
-   <img src = './assets/shark.jpg' class='fourteen'>
-   <img src = './assets/sweep.png' class='fifteen'>
-   <img src = './assets/tauntaun.jpg' class='sixteen'>
-   <img src = './assets/unicorn.jpg' class='seventeen'>
-   <img src = './assets/usb.gif' class='eighteen'>
-   <img src = './assets/water-can.jpg' class='nineteen'>
-   <img src = './assets/wine-glass.jpg' class='twenty'>
+   <img src='./assets/bag.jpg' class='pictures' id= 'one'>
+   <img src='./assets/banana.jpg' class='pictures' id= 'two'>
+   <img src='./assets/bathroom.jpg' class='pictures' id= 'three'>
+   <img src = './assets/boots.jpg' class='pictures' id= 'four'>
+   <img src = './assets/breakfast.jpg' class='pictures' id= 'five'>
+   <img src = './assets/bubblegum.jpg' class='pictures' id= 'six'>
+   <img src = './assets/chair.jpg' class='pictures' id= 'seven'>
+   <img src = './assets/cthulhu.jpg' class='pictures' id= 'eight'>
+   <img src = './assets/dog-duck.jpg' class='pictures' id= 'nine'>
+   <img src = './assets/dragon.jpg' class='pictures' id= 'ten'>
+   <img src = './assets/pen.jpg' class='pictures' id= 'eleven'>
+pictures<img src = './assets/pet-sweep.jpg' class='pictures' id= 'twelve'>
+   <img src = './assets/scissors.jpg' class='pictures' id= 'thirteen'>
+   <img src = './assets/shark.jpg' class='pictures' id= 'fourteen'>
+   <img src = './assets/sweep.png' class='pictures' id= 'fifteen'>
+   <img src = './assets/tauntaun.jpg' class='pictures' id= 'sixteen'>
+   <img src = './assets/unicorn.jpg' class='pictures' id= 'seventeen'>
+   <img src = './assets/usb.gif' class='pictures' id= 'eighteen'>
+   <img src = './assets/water-can.jpg' class='pictures' id= 'nineteen'>
+   <img src = './assets/wine-glass.jpg' class='pictures' id= 'twenty'>
    <!-- <img src = './assets/xxx.jpg' class='twenty-one'>
    <img src = './assets/xxx.jpg' class='twenty-two'>
    <img src = './assets/xxx.jpg' class='twenty-three'>
