adding divs to html to allow pics to disapear after click more easily

--- a/index.html
+++ b/index.html
@@ -5,18 +5,24 @@
       <link rel='stylesheet' href='style.css'>
    </head>
    <body>
-   <img src='./assets/bag.jpg' class='pictures' id= 'one'>
+   <div id='1st'>
+   <img src='./assets/bag.jpg' class='pictures' id= 'one' onclick='resetFunction()'>
    <img src='./assets/banana.jpg' class='pictures' id= 'two'>
    <img src='./assets/bathroom.jpg' class='pictures' id= 'three'>
+   <div/>
+
+   <div id ='2nd'>
    <img src = './assets/boots.jpg' class='pictures' id= 'four'>
    <img src = './assets/breakfast.jpg' class='pictures' id= 'five'>
    <img src = './assets/bubblegum.jpg' class='pictures' id= 'six'>
+   </div>
+
    <img src = './assets/chair.jpg' class='pictures' id= 'seven'>
    <img src = './assets/cthulhu.jpg' class='pictures' id= 'eight'>
    <img src = './assets/dog-duck.jpg' class='pictures' id= 'nine'>
    <img src = './assets/dragon.jpg' class='pictures' id= 'ten'>
    <img src = './assets/pen.jpg' class='pictures' id= 'eleven'>
-pictures<img src = './assets/pet-sweep.jpg' class='pictures' id= 'twelve'>
+   <img src = './assets/pet-sweep.jpg' class='pictures' id= 'twelve'>
    <img src = './assets/scissors.jpg' class='pictures' id= 'thirteen'>
    <img src = './assets/shark.jpg' class='pictures' id= 'fourteen'>
    <img src = './assets/sweep.png' class='pictures' id= 'fifteen'>
