added form content to html to make images clickable

--- a/index.html
+++ b/index.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
 <html>
-   <head>
-      <title></title>
+  <head>
+    <title></title>
       <link rel='stylesheet' href='style.css'>
    </head>
-   <body>
-   <div id='1st'>
-   <img src='./assets/bag.jpg' class='pictures' id= 'one' onclick='resetFunction()'>
-   <img src='./assets/banana.jpg' class='pictures' id= 'two'>
-   <img src='./assets/bathroom.jpg' class='pictures' id= 'three'>
-   <div/>
+  <body>
+      <div id='1st' class='click'>
+        <label>
+          <input type='radio' name='bag' value'medium' />
+          <img src='./assets/bag.jpg' class='pictures' id= 'two'>
+        </label>
 
-   <div id ='2nd'>
-   <img src = './assets/boots.jpg' class='pictures' id= 'four'>
-   <img src = './assets/breakfast.jpg' class='pictures' id= 'five'>
-   <img src = './assets/bubblegum.jpg' class='pictures' id= 'six'>
-   </div>
+      <label>
+        <input type='radio' name='banana' value'medium' />
+        <img src='./assets/banana.jpg' class='pictures' id= 'two'>
+      </label>
+      <label>
+        <input type='radio' name='bathroom' value'medium' />
+        <img src='./assets/bathroom.jpg' class='pictures' id= 'three'>
+      </label>
+     <div/>
+    <form>
+  <div id ='2nd'>
+    <img src = './assets/boots.jpg' class='pictures' id= 'four'>
+    <img src = './assets/breakfast.jpg' class='pictures' id= 'five'>
+    <img src = './assets/bubblegum.jpg' class='pictures' id= 'six'>
+  </div>
 
-   <img src = './assets/chair.jpg' class='pictures' id= 'seven'>
-   <img src = './assets/cthulhu.jpg' class='pictures' id= 'eight'>
-   <img src = './assets/dog-duck.jpg' class='pictures' id= 'nine'>
-   <img src = './assets/dragon.jpg' class='pictures' id= 'ten'>
-   <img src = './assets/pen.jpg' class='pictures' id= 'eleven'>
-   <img src = './assets/pet-sweep.jpg' class='pictures' id= 'twelve'>
-   <img src = './assets/scissors.jpg' class='pictures' id= 'thirteen'>
-   <img src = './assets/shark.jpg' class='pictures' id= 'fourteen'>
-   <img src = './assets/sweep.png' class='pictures' id= 'fifteen'>
-   <img src = './assets/tauntaun.jpg' class='pictures' id= 'sixteen'>
-   <img src = './assets/unicorn.jpg' class='pictures' id= 'seventeen'>
-   <img src = './assets/usb.gif' class='pictures' id= 'eighteen'>
-   <img src = './assets/water-can.jpg' class='pictures' id= 'nineteen'>
-   <img src = './assets/wine-glass.jpg' class='pictures' id= 'twenty'>
+  <div id='3rd'>
+    <img src = './assets/chair.jpg' class='pictures' id= 'seven'>
+    <img src = './assets/cthulhu.jpg' class='pictures' id= 'eight'>
+    <img src = './assets/dog-duck.jpg' class='pictures' id= 'nine'>
+  </div>
+
+  <div id='4th'>
+    <img src = './assets/dragon.jpg' class='pictures' id= 'ten'>
+    <img src = './assets/pen.jpg' class='pictures' id= 'eleven'>
+    <img src = './assets/pet-sweep.jpg' class='pictures' id= 'twelve'>
+  </div>
+
+  <div id='5th'>
+    <img src = './assets/scissors.jpg' class='pictures' id= 'thirteen'>
+    <img src = './assets/shark.jpg' class='pictures' id= 'fourteen'>
+    <img src = './assets/sweep.png' class='pictures' id= 'fifteen'>
+  </div>
+
+  <div id='6th'>
+    <img src = './assets/tauntaun.jpg' class='pictures' id= 'sixteen'>
+    <img src = './assets/unicorn.jpg' class='pictures' id= 'seventeen'>
+    <img src = './assets/usb.gif' class='pictures' id= 'eighteen'>
+  </div>
+
+  <div id='7th'>
+    <img src = './assets/water-can.jpg' class='pictures' id= 'nineteen'>
+    <img src = './assets/wine-glass.jpg' class='pictures' id= 'twenty'>
+    <img src = './assets/boots.jpg' class='pictures' id= 'four'>
+  </div>
    <!-- <img src = './assets/xxx.jpg' class='twenty-one'>
    <img src = './assets/xxx.jpg' class='twenty-two'>
    <img src = './assets/xxx.jpg' class='twenty-three'>
