added random photos to divs as buttons on html test file

--- a/test.html
+++ b/test.html
@@ -5,44 +5,305 @@
       <link rel='stylesheet' href='style.css'>
    </head>
   <body>
+
     <div id='rndOne' class='rndOne'>
-    <form id='formRndOne' class='form'>
-      <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
-    </form>
-    <form id='formRndOne' class='form'>
-      <button><img src='./assets/banana.jpg' class='picture' id='two'/></button> <input type='hidden' name='bookmark' value='bananaphoto'/>
-    </form>
-    <form id='formRndOne' class='form'>
-      <button><img src='./assets/bathroom.jpg' class='picture' id='three'/></button> <input type='hidden' name='bookmark' value='bathroomphoto'/>
-    </form>
+      <form id='formRndOne' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+      <form id='formRndOne' class='form'>
+        <button><img src='./assets/banana.jpg' class='picture' id='two'/></button> <input type='hidden' name='bookmark' value='bananaphoto'/>
+      </form>
+      <form id='formRndOne' class='form'>
+        <button><img src='./assets/bathroom.jpg' class='picture' id='three'/></button> <input type='hidden' name='bookmark' value='bathroomphoto'/>
+      </form>
+    </div>
 
+    <div id='rndTwo' class='rndTwo'>
+      <form id='formRndTwo' class='form'>
+        <button><img src='./assets/boots.jpg' class='picture' id='four'/></button> <input type='hidden' name='bookmark' value='bootsphoto'/>
+      </form>
+      <form id='formRndTwo' class='form'>
+        <button><img src='./assets/breakfast.jpg' class='picture' id='five'/></button> <input type='hidden' name='bookmark' value='breakfastphoto'/>
+      </form>
+      <form id='formRndTwo' class='form'>
+        <button><img src='./assets/bubblegum.jpg' class='picture' id='six'/></button> <input type='hidden' name='bookmark' value='bubblegumphoto'/>
+      </form>
+    </div>
 
+    <div id='rndThree' class='rndThree'>
+      <form id='formRndThree' class='form'>
+        <button><img src='./assets/chair.jpg' class='picture' id='seven'/></button> <input type='hidden' name='bookmark' value='chairphoto'/>
+      </form>
+      <form id='formRndThree' class='form'>
+        <button><img src='./assets/cthulhu.jpg' class='picture' id='eight'/></button> <input type='hidden' name='bookmark' value='cthulhuphoto'/>
+      </form>
+      <form id='formRndThree' class='form'>
+        <button><img src='./assets/dog-duck.jpg' class='picture' id='nine'/></button> <input type='hidden' name='bookmark' value='dog-duckphoto'/>
+      </form>
+    </div>
 
+    <div id='rndFour' class='rndFour'>
+      <form id='formRndFour' class='form'>
+        <button><img src='./assets/dragon.jpg' class='picture' id='ten'/></button> <input type='hidden' name='bookmark' value='dragonphoto'/>
+      </form>
+      <form id='formRndFour' class='form'>
+        <button><img src='./assets/pen.jpg' class='picture' id='eleven'/></button> <input type='hidden' name='bookmark' value='penphoto'/>
+      </form>
+      <form id='formRndFour' class='form'>
+        <button><img src='./assets/pet-sweep.jpg' class='picture' id='twelve'/></button> <input type='hidden' name='bookmark' value='pet-sweephoto'/>
+      </form>
+    </div>
 
+    <div id='rndFive' class='rndFive'>
+      <form id='formRndFive' class='form'>
+        <button><img src='./assets/scissors.jpg' class='picture' id='thirteen'/></button> <input type='hidden' name='bookmark' value='scissorsphoto'/>
+      </form>
+      <form id='formRndFive' class='form'>
+        <button><img src='./assets/shark.jpg' class='picture' id='fourteen'/></button> <input type='hidden' name='bookmark' value='sharkphoto'/>
+      </form>
+      <form id='formRndFive' class='form'>
+        <button><img src='./assets/sweep.png' class='picture' id='fifteen'/></button> <input type='hidden' name='bookmark' value='sweepphoto'/>
+      </form>
+    </div>
 
-  </div>
+    <div id='rndSix' class='rndSix'>
+      <form id='formRndSix' class='form'>
+        <button><img src='./assets/tauntaun.jpg' class='picture' id='sixteen'/></button> <input type='hidden' name='bookmark' value='tauntaunphoto'/>
+      </form>
+      <form id='formRndSix' class='form'>
+        <button><img src='./assets/unicorn.jpg' class='picture' id='seventeen'/></button> <input type='hidden' name='bookmark' value='unicornphoto'/>
+      </form>
+      <form id='formRndSix' class='form'>
+        <button><img src='./assets/usb.gif' class='picture' id='eighteen'/></button> <input type='hidden' name='bookmark' value='usbphoto'/>
+      </form>
+    </div>
 
+    <div id='rndSeven' class='rndSeven'>
+      <form id='formRndSeven' class='form'>
+        <button><img src='./assets/water-can.jpg' class='picture' id='nineteen'/></button> <input type='hidden' name='bookmark' value='water-canphoto'/>
+      </form>
+      <form id='formRndSeven' class='form'>
+        <button><img src='./assets/wine-glass.jpg' class='picture' id='twenty'/></button> <input type='hidden' name='bookmark' value='wine-glassphoto'/>
+      </form>
+      <form id='formRndSeven' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+    </div>
 
+    <div id='rndEight' class='rndEight'>
+      <form id='formRndEight' class='form'>
+        <button><img src='./assets/bathroom.jpg' class='picture' id='three'/></button> <input type='hidden' name='bookmark' value='bathroomphoto'/>
+      </form>
+      <form id='formRndEight' class='form'>
+        <button><img src='./assets/bubblegum.jpg' class='picture' id='six'/></button> <input type='hidden' name='bookmark' value='bubblegumphoto'/>
+      </form>
+      <form id='formRndEight' class='form'>
+        <button><img src='./assets/dog-duck.jpg' class='picture' id='nine'/></button> <input type='hidden' name='bookmark' value='dog-duckphoto'/>
+      </form>
+    </div>
 
+    <div id='rndNine' class='rndNine'>
+      <form id='formRndNine' class='form'>
+        <button><img src='./assets/banana.jpg' class='picture' id='two'/></button> <input type='hidden' name='bookmark' value='bananaphoto'/>
+      </form>
+      <form id='formRndNine' class='form'>
+        <button><img src='./assets/breakfast.jpg' class='picture' id='five'/></button> <input type='hidden' name='bookmark' value='breakfastphoto'/>
+      </form>
+      <form id='formRndNine' class='form'>
+        <button><img src='./assets/cthulhu.jpg' class='picture' id='eight'/></button> <input type='hidden' name='bookmark' value='cthulhuphoto'/>
+      </form>
+    </div>
 
+    <div id='rndTen' class='rndTen'>
+      <form id='formRndSeven' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+      <form id='formRndTen' class='form'>
+        <button><img src='./assets/boots.jpg' class='picture' id='four'/></button> <input type='hidden' name='bookmark' value='bootsphoto'/>
+      </form>
+      <form id='formRndTen' class='form'>
+        <button><img src='./assets/chair.jpg' class='picture' id='seven'/></button> <input type='hidden' name='bookmark' value='chairphoto'/>
+      </form>
+    </div>
 
+    <div id='rndEleven' class='rndEleven'>
+      <form id='formRndEleven' class='form'>
+        <button><img src='./assets/dragon.jpg' class='picture' id='ten'/></button> <input type='hidden' name='bookmark' value='dragonphoto'/>
+      </form>
+      <form id='formRndEleven' class='form'>
+        <button><img src='./assets/scissors.jpg' class='picture' id='thirteen'/></button> <input type='hidden' name='bookmark' value='scissorsphoto'/>
+      </form>
+      <form id='formRndEleven' class='form'>
+        <button><img src='./assets/tauntaun.jpg' class='picture' id='sixteen'/></button> <input type='hidden' name='bookmark' value='tauntaunphoto'/>
+      </form>
+    </div>
 
+    <div id='rndTwelve' class='rndTwelve'>
+      <form id='formRndTwelve' class='form'>
+        <button><img src='./assets/pen.jpg' class='picture' id='eleven'/></button> <input type='hidden' name='bookmark' value='penphoto'/>
+      </form>
+      <form id='formRndTwelve' class='form'>
+        <button><img src='./assets/shark.jpg' class='picture' id='fourteen'/></button> <input type='hidden' name='bookmark' value='sharkphoto'/>
+      </form>
+      <form id='formRndTwelve' class='form'>
+        <button><img src='./assets/unicorn.jpg' class='picture' id='seventeen'/></button> <input type='hidden' name='bookmark' value='unicornphoto'/>
+      </form>
+    </div>
 
-      <!-- <div id='1st' class='click'>
-        <label>
-          <input type='radio' name='bag' value'medium' />
-          <img src='./assets/bag.jpg' class='pictures' id= 'two'>
-        </label>
+    <div id='rndThirteen' class='rndThirteen'>
+      <form id='formRndThirteen' class='form'>
+        <button><img src='./assets/pet-sweep.jpg' class='picture' id='twelve'/></button> <input type='hidden' name='bookmark' value='pet-sweephoto'/>
+      </form>
+      <form id='formRndThirteen' class='form'>
+        <button><img src='./assets/sweep.png' class='picture' id='fifteen'/></button> <input type='hidden' name='bookmark' value='sweepphoto'/>
+      </form>
+      <form id='formRndThirteen' class='form'>
+        <button><img src='./assets/usb.gif' class='picture' id='eighteen'/></button> <input type='hidden' name='bookmark' value='usbphoto'/>
+      </form>
+    </div>
 
-      <label>
-        <input type='radio' name='banana' value'medium' />
-        <img src='./assets/banana.jpg' class='pictures' id= 'two'>
-      </label>
-      <label>
-        <input type='radio' name='bathroom' value'medium' />
-        <img src='./assets/bathroom.jpg' class='pictures' id= 'three'>
-      </label>
-     <div/> -->
+    <div id='rndFourteen' class='rndFourteen'>
+      <form id='formRndFourteen' class='form'>
+        <button><img src='./assets/water-can.jpg' class='picture' id='nineteen'/></button> <input type='hidden' name='bookmark' value='water-canphoto'/>
+      </form>
+      <form id='formRndFourteen' class='form'>
+        <button><img src='./assets/bubblegum.jpg' class='picture' id='six'/></button> <input type='hidden' name='bookmark' value='bubblegumphoto'/>
+      </form>
+      <form id='formRndFourteen' class='form'>
+        <button><img src='./assets/cthulhu.jpg' class='picture' id='eight'/></button> <input type='hidden' name='bookmark' value='cthulhuphoto'/>
+      </form>
+    </div>
+
+    <div id='rndFifteen' class='rndFifteen'>
+      <button><img src='./assets/wine-glass.jpg' class='picture' id='twenty'/></button> <input type='hidden' name='bookmark' value='wine-glassphoto'/>
+      </form>
+      <form id='formRndFifteen' class='form'>
+        <button><img src='./assets/bathroom.jpg' class='picture' id='three'/></button> <input type='hidden' name='bookmark' value='bathroomphoto'/>
+      </form>
+      <form id='formRndFifteen' class='form'>
+        <button><img src='./assets/breakfast.jpg' class='picture' id='five'/></button> <input type='hidden' name='bookmark' value='breakfastphoto'/>
+      </form>
+    </div>
+
+    <div id='rndSixteen' class='rndSixteen'>
+      <form id='formRndSixteen' class='form'>
+        <button><img src='./assets/chair.jpg' class='picture' id='seven'/></button> <input type='hidden' name='bookmark' value='chairphoto'/>
+      </form>
+      <form id='formRndSixteen' class='form'>
+        <button><img src='./assets/bubblegum.jpg' class='picture' id='six'/></button> <input type='hidden' name='bookmark' value='bubblegumphoto'/>
+      </form>
+      <form id='formRndSixteen' class='form'>
+        <button><img src='./assets/cthulhu.jpg' class='picture' id='eight'/></button> <input type='hidden' name='bookmark' value='cthulhuphoto'/>
+      </form>
+    </div>
+
+    <div id='rndSeventeen' class='rndSeventeen'>
+      <form id='formRndSeventeen' class='form'>
+        <button><img src='./assets/bathroom.jpg' class='picture' id='three'/></button> <input type='hidden' name='bookmark' value='bathroomphoto'/>
+      </form>
+      <form id='formRndSeventeen' class='form'>
+        <button><img src='./assets/wine-glass.jpg' class='picture' id='twenty'/></button> <input type='hidden' name='bookmark' value='wine-glassphoto'/>
+      </form>
+      <form id='formRndSeventeen' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+    </div>
+
+    <div id='rndEighteen' class='rndEighteen'>
+      <form id='formRndEighteen' class='form'>
+        <button><img src='./assets/bubblegum.jpg' class='picture' id='six'/></button> <input type='hidden' name='bookmark' value='bubblegumphoto'/>
+      </form>
+      <form id='formRndEighteen' class='form'>
+        <button><img src='./assets/dog-duck.jpg' class='picture' id='nine'/></button> <input type='hidden' name='bookmark' value='dog-duckphoto'/>
+      </form>
+      <form id='formRndEighteen' class='form'>
+        <button><img src='./assets/pen.jpg' class='picture' id='eleven'/></button> <input type='hidden' name='bookmark' value='penphoto'/>
+      </form>
+    </div>
+
+    <div id='rndNineteen' class='rndNineteen'>
+      <form id='formRndNineteen' class='form'>
+        <button><img src='./assets/dog-duck.jpg' class='picture' id='nine'/></button> <input type='hidden' name='bookmark' value='dog-duckphoto'/>
+      </form>
+      <form id='formRndNineteen' class='form'>
+        <button><img src='./assets/wine-glass.jpg' class='picture' id='twenty'/></button> <input type='hidden' name='bookmark' value='wine-glassphoto'/>
+      </form>
+      <form id='formRndNineteen' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+    </div>
+
+    <div id='rndTwenty' class='rndTwenty'>
+      <form id='formRndTwenty' class='form'>
+        <button><img src='./assets/water-can.jpg' class='picture' id='nineteen'/></button> <input type='hidden' name='bookmark' value='water-canphoto'/>
+      </form>
+      <form id='formRndTwenty' class='form'>
+        <button><img src='./assets/wine-glass.jpg' class='picture' id='twenty'/></button> <input type='hidden' name='bookmark' value='wine-glassphoto'/>
+      </form>
+      <form id='formRndTwenty' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+    </div>
+
+    <div id='rndTwentyOne' class='rndTwentyOne'>
+      <form id='formRndTwentyOne' class='form'>
+        <button><img src='./assets/water-can.jpg' class='picture' id='nineteen'/></button> <input type='hidden' name='bookmark' value='water-canphoto'/>
+      </form>
+      <form id='formRndTwentyOne' class='form'>
+        <button><img src='./assets/wine-glass.jpg' class='picture' id='twenty'/></button> <input type='hidden' name='bookmark' value='wine-glassphoto'/>
+      </form>
+      <form id='formRndTwentyOne' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+    </div>
+
+    <div id='rndTwentyTwo' class='rndTwentyTwo'>
+      <form id='formRndTwentyTwo' class='form'>
+        <button><img src='./assets/water-can.jpg' class='picture' id='nineteen'/></button> <input type='hidden' name='bookmark' value='water-canphoto'/>
+      </form>
+      <form id='formRndTwentyTwo' class='form'>
+        <button><img src='./assets/wine-glass.jpg' class='picture' id='twenty'/></button> <input type='hidden' name='bookmark' value='wine-glassphoto'/>
+      </form>
+      <form id='formRndTwentyTwo' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+    </div>
+
+    <div id='rndTwentyThree' class='rndTwentyThree'>
+      <form id='formRndTwentyThree' class='form'>
+        <button><img src='./assets/water-can.jpg' class='picture' id='nineteen'/></button> <input type='hidden' name='bookmark' value='water-canphoto'/>
+      </form>
+      <form id='formRndTwentyThree' class='form'>
+        <button><img src='./assets/wine-glass.jpg' class='picture' id='twenty'/></button> <input type='hidden' name='bookmark' value='wine-glassphoto'/>
+      </form>
+      <form id='formRndTwentyThree' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+    </div>
+
+    <div id='rndTwentyFour' class='rndTwentyFour'>
+      <form id='formRndTwentyFour' class='form'>
+        <button><img src='./assets/water-can.jpg' class='picture' id='nineteen'/></button> <input type='hidden' name='bookmark' value='water-canphoto'/>
+      </form>
+      <form id='formRndTwentyFour' class='form'>
+        <button><img src='./assets/wine-glass.jpg' class='picture' id='twenty'/></button> <input type='hidden' name='bookmark' value='wine-glassphoto'/>
+      </form>
+      <form id='formRndTwentyFour' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+    </div>
+
+    <div id='rndTwentyFive' class='rndTwentyFive'>
+      <form id='formRndTwentyFive' class='form'>
+        <button><img src='./assets/water-can.jpg' class='picture' id='nineteen'/></button> <input type='hidden' name='bookmark' value='water-canphoto'/>
+      </form>
+      <form id='formRndTwentyFive' class='form'>
+        <button><img src='./assets/wine-glass.jpg' class='picture' id='twenty'/></button> <input type='hidden' name='bookmark' value='wine-glassphoto'/>
+      </form>
+      <form id='formRndTwentyFive' class='form'>
+        <button><img src='./assets/bag.jpg' class='picture' id='one'/></button> <input type='hidden' name='bookmark' value='bagphoto'/>
+      </form>
+    </div>
    </body>
    <script src='app.js'></script>
 </html>
