adding another way to console log how many times a picture is displayed

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
       <div id='1st' class='click'>
         <label>
           <input type='radio' name='bag' value'medium' />
-          <img src='./assets/bag.jpg' class='pictures' id= 'two'>
+          <img src='./assets/bag.jpg' class='pictures' id= 'bag'>
         </label>
 
       <label>
         <input type='radio' name='banana' value'medium' />
-        <img src='./assets/banana.jpg' class='pictures' id= 'two'>
+        <img src='./assets/banana.jpg' class='pictures' id= 'bag'>
       </label>
       <label>
         <input type='radio' name='bathroom' value'medium' />
-        <img src='./assets/bathroom.jpg' class='pictures' id= 'three'>
+        <img src='./assets/bathroom.jpg' class='pictures' id= 'bag'>
       </label>
      <div/>
     <form>
