refactored code to have 3 images print to the dom randomly

--- a/test.html
+++ b/test.html
@@ -5,7 +5,11 @@
       <link rel='stylesheet' href='style.css'>
    </head>
   <body>
-
+    <div id ='3pics' class 'pictures-div'>
+      <button><img src='' id='0' class='pictures'></button>
+      <button><img src='' id='1' class='pictures'></button>
+      <button><img src='' id='2' class='pictures'></button>
+    </div>
     <script src='app.js'></script>
    </body>
 </html>
